# Specter-Tracer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTICE  README.md
example/: example.c  exampleFunctions.h  exampleGlobalValues.h
headers/ST/: ST.h  renderTarget.h
source/: renderTarget.c
